# workload-analyzer

./: .dockerignore  .env.example  Dockerfile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  schema_jobs.json  schema_platforms.json
.github/workflows/: deploy-production.yml
tests/: __init__.py  conftest.py  test_utils.py
tests/api/: test_endpoints.py
tests/integration/: test_api_integration.py
tests/unit/: test_bedrock_integration.py  test_config.py  test_models.py  test_services.py
workload_analyzer/: __init__.py  config.py  exceptions.py  main.py
workload_analyzer/analysis/: __init__.py  custom_analyzer.py  job_insights.py  performance_analyzer.py  platform_optimizer.py  trend_analyzer.py
workload_analyzer/api/: __init__.py  analysis.py  dependencies.py  instances.py  jobs.py  platforms.py
workload_analyzer/models/: __init__.py  job_models.py  platform_models.py  response_models.py
workload_analyzer/services/: __init__.py  auth_service.py  file_service.py  iss_client.py
workload_analyzer/utils/: __init__.py  logging.py  response_summarizer.py
